redis/RedisToggler.Api/eng/.k8s/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: $NAMESPACE
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-toggler-deploy
  namespace: $NAMESPACE
spec:
  replicas: 2
  selector:
    matchLabels:
      name: redis-toggler-deploy
  template:
    metadata:
      labels:
        name: redis-toggler-deploy
    spec:
      containers:
        - image: ${HOSTNAME}/${DOCKER_REPOSITORYNAME}:${DOCKER_IMAGETAG}
          name: ${DOCKER_REPOSITORYNAME}
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: api
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "2"
              memory: "516Mi"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      tolerations:
        - key: "kubernetes.azure.com/scalesetpriority"
          operator: "Equal"
          value: "spot"
          effect: "NoSchedule"
      # nodeSelector:
      #   node-type: worker
      #   kubernetes.io/arch: arm64
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/arch
                    operator: In
                    values:
                      - arm64
                  - key: node-type
                    operator: In
                    values:
                      - worker
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  revisionHistoryLimit: 3
---
apiVersion: v1
kind: Service
metadata:
  name: redis-toggler-service
  namespace: $NAMESPACE
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    name: redis-toggler-deploy
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-toggler-ingress
  namespace: $NAMESPACE
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - redis-toggler.home.arpa
      secretName: wildcard-home-arpa
  rules:
    - host: redis-toggler.home.arpa
      http:
        paths:
          - path: /api/health
            pathType: Prefix
            backend:
              service:
                name: redis-toggler-service
                port:
                  number: 80
---
# Traefik Middleware to strip the /api prefix for API routes
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-api
  namespace: $NAMESPACE
spec:
  stripPrefix:
    prefixes:
      - /api

---
# Ingress that applies the StripPrefix middleware to all /api/* paths
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-toggler-ingress-api
  namespace: $NAMESPACE
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: "$NAMESPACE-strip-api@kubernetescrd"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - redis-toggler.home.arpa
      secretName: wildcard-home-arpa  
  rules:
    - host: redis-toggler.home.arpa
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: redis-toggler-service
                port:
                  number: 80
---
kind: Service
apiVersion: v1
metadata:
  name: redis-server-ref
  namespace: $NAMESPACE
spec:
  type: ExternalName
  externalName: redis-server.redis-server.svc.cluster.local
  ports:
    - port: 6379
